fix: contrast issues with outline color on light mode

--- a/src/components/Buttons/Button.module.scss
+++ b/src/components/Buttons/Button.module.scss
@@ -14,6 +14,6 @@
   }
 
   &:focus {
-    outline: 0.15rem solid var(--special);
+    outline: 0.15rem solid var(--accent);
   }
 }
